--- a/interface-builder-task/Base.lproj/Main.storyboard
+++ b/interface-builder-task/Base.lproj/Main.storyboard
@@ -134,8 +134,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tnc-nn-FCp" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="RvO-1n-gvz" userLabel="Field Stack View">
-                                                <rect key="frame" x="16" y="75" width="382" height="277.33333333333331"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="RvO-1n-gvz" userLabel="Field Stack View">
+                                                <rect key="frame" x="16" y="75" width="382" height="276.33333333333331"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Регистрация" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhJ-7r-f1Y">
                                                         <rect key="frame" x="0.0" y="0.0" width="382" height="43"/>
@@ -153,7 +153,7 @@
                                                         <rect key="frame" x="0.0" y="108.33333333333334" width="382" height="41"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="username"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                                 <real key="value" value="1"/>
@@ -167,7 +167,7 @@
                                                         <rect key="frame" x="0.0" y="172.33333333333331" width="382" height="41"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="email"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                                 <real key="value" value="1"/>
@@ -178,10 +178,10 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </textField>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="S8k-Tk-2st" customClass="CustomTextField" customModule="interface_builder_task" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="236.33333333333331" width="382" height="41"/>
+                                                        <rect key="frame" x="0.0" y="236.33333333333331" width="382" height="40"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" secureTextEntry="YES" textContentType="password"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                                 <real key="value" value="1"/>
@@ -225,7 +225,7 @@
                                             <constraint firstItem="elZ-w3-GZg" firstAttribute="leading" secondItem="Tnc-nn-FCp" secondAttribute="leading" id="6Wk-2d-Lrj"/>
                                             <constraint firstAttribute="bottom" secondItem="elZ-w3-GZg" secondAttribute="bottom" constant="20" symbolic="YES" id="SIN-8m-IA9"/>
                                             <constraint firstAttribute="trailing" secondItem="elZ-w3-GZg" secondAttribute="trailing" id="YzB-oZ-rUE"/>
-                                            <constraint firstItem="RvO-1n-gvz" firstAttribute="top" secondItem="Tnc-nn-FCp" secondAttribute="top" constant="75.000000000000014" id="hfL-WE-QnX"/>
+                                            <constraint firstItem="RvO-1n-gvz" firstAttribute="top" secondItem="Tnc-nn-FCp" secondAttribute="top" constant="75" id="hfL-WE-QnX"/>
                                             <constraint firstAttribute="trailing" secondItem="RvO-1n-gvz" secondAttribute="trailing" constant="16" id="k1B-qj-CCD"/>
                                         </constraints>
                                     </view>
@@ -277,7 +277,7 @@
             <size key="intrinsicContentSize" width="56.666666666666664" height="41"/>
         </designable>
         <designable name="S8k-Tk-2st">
-            <size key="intrinsicContentSize" width="87" height="41"/>
+            <size key="intrinsicContentSize" width="87" height="40"/>
         </designable>
         <designable name="SWG-c1-FaD">
             <size key="intrinsicContentSize" width="56.666666666666664" height="41"/>
