--- a/interface-builder-task/Base.lproj/Main.storyboard
+++ b/interface-builder-task/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8lj-se-NP7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="net-wg-Ntq">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -256,7 +256,116 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KTl-gq-m4y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2471" y="75"/>
+            <point key="canvasLocation" x="1722" y="167"/>
+        </scene>
+        <!--Титутльник 2-->
+        <scene sceneID="8eE-gz-Q4v">
+            <objects>
+                <viewController id="QoN-cN-Eco" customClass="ColletionViewController" customModule="interface_builder_task" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3lF-ZJ-7AY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="IJ1-Gl-NzW">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xaG-9f-6g6">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="BSM-QC-qeV"/>
+                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <constraints>
+                            <constraint firstItem="BSM-QC-qeV" firstAttribute="bottom" secondItem="IJ1-Gl-NzW" secondAttribute="bottom" id="Ep1-cH-2KY"/>
+                            <constraint firstItem="BSM-QC-qeV" firstAttribute="trailing" secondItem="IJ1-Gl-NzW" secondAttribute="trailing" id="VIY-cy-l2u"/>
+                            <constraint firstItem="IJ1-Gl-NzW" firstAttribute="leading" secondItem="BSM-QC-qeV" secondAttribute="leading" id="tAT-Z7-rXo"/>
+                            <constraint firstItem="IJ1-Gl-NzW" firstAttribute="top" secondItem="BSM-QC-qeV" secondAttribute="top" id="xUB-9c-ApN"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="wl3-mo-X1E"/>
+                    <navigationItem key="navigationItem" title="Титутльник 2" id="9ll-g0-Dcs"/>
+                    <connections>
+                        <outlet property="colletionView" destination="IJ1-Gl-NzW" id="7cd-QM-QKI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A1J-3Q-frF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6081" y="-976"/>
+        </scene>
+        <!--Титульник 1-->
+        <scene sceneID="vKK-aZ-PQK">
+            <objects>
+                <viewController id="ZTT-LT-hj9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0EA-hv-rRf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="d76-TJ-hmE"/>
+                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="UkS-nH-uFq"/>
+                    <navigationItem key="navigationItem" title="Титульник 1" id="xJD-me-tvM"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RsB-wk-h9E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6268" y="-238"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="FQj-eh-3fo">
+            <objects>
+                <navigationController id="vFf-2c-AQD" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 2" image="pencil" catalog="system" id="Bh9-2Z-YJ8"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oSd-nc-zJj">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="QoN-cN-Eco" kind="relationship" relationship="rootViewController" id="Wp8-bR-abK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mkq-x4-jfR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5320" y="-976"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="7ak-Jb-OIN">
+            <objects>
+                <navigationController id="fIw-FX-kgf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 1" image="pencil.slash" catalog="system" id="a4J-aC-wfi"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Jrm-n2-go8">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="ZTT-LT-hj9" kind="relationship" relationship="rootViewController" id="FDL-v0-9Gh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DQx-i0-Uuc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5409" y="-238"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="SFe-di-Y9K">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5gB-sg-p6n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tabBarController id="gRs-vC-jcD" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="0NU-St-KSz"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yUT-kC-huF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="fIw-FX-kgf" kind="relationship" relationship="viewControllers" id="qYk-jF-9Vj"/>
+                        <segue destination="vFf-2c-AQD" kind="relationship" relationship="viewControllers" id="qSX-IY-Xbc"/>
+                    </connections>
+                </tabBarController>
+            </objects>
+            <point key="canvasLocation" x="4577" y="-238"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="Rw4-yz-xKu">
@@ -288,6 +397,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3IO-EN-hIO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="993" y="75"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Td7-aK-fMu">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XNG-Dj-6FJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <navigationController navigationBarHidden="YES" id="qbP-jq-WC8" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XFh-Jg-aXy">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="net-wg-Ntq" kind="relationship" relationship="rootViewController" id="pMD-R4-nrH"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="2614" y="-251"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="4Y3-oG-ZRd">
@@ -364,6 +488,9 @@
                                                         <state key="normal" title="Войти">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
+                                                        <connections>
+                                                            <segue destination="gRs-vC-jcD" kind="modal" modalPresentationStyle="fullScreen" id="0MR-5P-P3d"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlS-wa-46K" customClass="CustomButtom" customModule="interface_builder_task" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="66" width="414" height="51"/>
@@ -410,6 +537,7 @@
                             <constraint firstItem="9RD-Wv-jzH" firstAttribute="trailing" secondItem="ZWK-EJ-PmF" secondAttribute="trailing" id="kEf-KN-j1A"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="zXl-vj-8fs"/>
                     <connections>
                         <outlet property="authLabel" destination="lI4-t6-nVj" id="whv-9R-JHa"/>
                         <outlet property="loginAuthTextField" destination="2g1-kC-wLJ" id="4TJ-a5-ctQ"/>
@@ -420,7 +548,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4QL-9B-bD6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1722" y="75"/>
+            <point key="canvasLocation" x="3549" y="-268"/>
         </scene>
     </scenes>
     <designables>
@@ -462,8 +590,13 @@
         </designable>
     </designables>
     <resources>
+        <image name="pencil" catalog="system" width="128" height="113"/>
+        <image name="pencil.slash" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemTealColor">
             <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
